# AudioUtils

./: .gitignore  CMakeLists.txt  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: AndroidDebug.h  jni_ecnr.cc  mobvoi_dsp.h
src/main/java/com/ebo/voice/audio/process/jni/: EcnrConnector.java
src/main/java/com/vwm/audioutils/: AudioConverter.java  AudioWriter.java  FileUtils.java  RingBuffer.java  RingBufferType1.java  RingBufferType2.java  WavReader.java  WavWriter.java
src/main/java/com/vwm/audioutils/npy/: Endian.java  Npy.java  NpyHeader.java
src/main/java/com/vwm/audioutils/recorder/: AudioDataListener.java  AudioRecordManager.java  BaseAudioRecord.java  DefaultAudioRecord.java  JettaAudioRecord.java  JettaEcnrProcess.java  NormalAudioRecord.java  NxpAudioRecord.java
src/main/java/com/vwm/audioutils/ringbuffer/: BaseRingBuffer.java  RingBuffer.java  RingBufferType1.java  RingBufferType2.java
